--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">CoolWeather</string>
+    <string name="app_name">槑天气</string>
     <string name="action_settings">Settings</string>
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_choose_area">ChooseAreaActivity</string>
     <string name="title_activity_weather">WeatherActivity</string>
+    <string name="title_activity_auto_update_service">AutoUpdateService</string>
 
 </resources>
